--- a/.gitignore
+++ b/.gitignore
@@ -115,7 +115,15 @@ _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
 
-
+############
+## Project specific
+############
+*.o
+*.a
+*.cmi
+*.cmx
+*.cmxa
+lexer.ml
 
 ############
 ## Windows
