--- a/hydr-compiler/src/main/ocaml/extlib/Makefile
+++ b/hydr-compiler/src/main/ocaml/extlib/Makefile
@@ -2,7 +2,7 @@
 
 MODULES = \
  enum bitSet dynArray extArray extHashtbl extList extString global IO option \
- pMap std uChar uTF8 base64 unzip refList optParse dllist multiArray
+ pMap std uChar uTF8 base64 unzip refList optParse dllist multiArray version
 
 # the list is topologically sorted
 
